// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader: Match snapshots 1 1`] = `
<Header
  left={
    <TouchableOpacity
      activeOpacity={0.2}
    >
      <Themed.Icon
        color="#FFF"
        name="arrow-back"
        onPress={[Function]}
        type="material-icons"
      />
    </TouchableOpacity>
  }
  navigation={
    Object {
      "addListener": [MockFunction],
      "closeDrawer": [MockFunction],
      "dangerouslyGetParent": [MockFunction],
      "dismiss": [MockFunction],
      "dispatch": [MockFunction],
      "emit": [MockFunction],
      "getParam": [MockFunction],
      "goBack": [MockFunction],
      "isFirstRouteInParent": [MockFunction],
      "isFocused": [MockFunction],
      "navigate": [MockFunction],
      "openDrawer": [MockFunction],
      "setParams": [MockFunction],
      "state": Object {
        "index": 0,
        "isTransitioning": false,
        "key": "Home",
        "routeName": "Home",
        "routes": Array [
          Object {
            "index": 1,
            "isTransitioning": false,
            "key": "Encoding",
            "routeName": "Encoding",
            "routes": Array [
              Object {
                "key": "id-1565732047195-0",
                "routeName": "Main",
              },
              Object {
                "key": "id-1565732047195-2",
                "params": Object {
                  "uri": "file:/data/user/0/com.stegappasaurus/cache/ImagePicker/a89493b5-e2a5-4546-80f3-4fb13d2461d8.png",
                },
                "routeName": "Message",
              },
            ],
          },
          Object {
            "index": 0,
            "isTransitioning": false,
            "key": "Decoding",
            "routeName": "Decoding",
            "routes": Array [
              Object {
                "key": "id-1565732047195-1",
                "routeName": "Main",
              },
            ],
          },
        ],
      },
      "toggleDrawer": [MockFunction],
    }
  }
  primary="#009CFF"
  styles={
    Object {
      "height": 50,
    }
  }
  theme={
    Object {
      "background": "#17212D",
      "color": "#FFF",
      "isDark": false,
    }
  }
/>
`;

exports[`AppHeader: Match snapshots 2 1`] = `
<Header
  left={
    <TouchableOpacity
      activeOpacity={0.2}
    >
      <Themed.Icon
        color="#17212D"
        name="arrow-back"
        onPress={[Function]}
        type="material-icons"
      />
    </TouchableOpacity>
  }
  navigation={
    Object {
      "addListener": [MockFunction],
      "closeDrawer": [MockFunction],
      "dangerouslyGetParent": [MockFunction],
      "dismiss": [MockFunction],
      "dispatch": [MockFunction],
      "emit": [MockFunction],
      "getParam": [MockFunction],
      "goBack": [MockFunction],
      "isFirstRouteInParent": [MockFunction],
      "isFocused": [MockFunction],
      "navigate": [MockFunction],
      "openDrawer": [MockFunction],
      "setParams": [MockFunction],
      "state": Object {
        "index": 0,
        "isTransitioning": false,
        "key": "Home",
        "routeName": "Home",
        "routes": Array [
          Object {
            "index": 1,
            "isTransitioning": false,
            "key": "Encoding",
            "routeName": "Encoding",
            "routes": Array [
              Object {
                "key": "id-1565732047195-0",
                "routeName": "Main",
              },
              Object {
                "key": "id-1565732047195-2",
                "params": Object {
                  "uri": "file:/data/user/0/com.stegappasaurus/cache/ImagePicker/a89493b5-e2a5-4546-80f3-4fb13d2461d8.png",
                },
                "routeName": "Message",
              },
            ],
          },
          Object {
            "index": 0,
            "isTransitioning": false,
            "key": "Decoding",
            "routeName": "Decoding",
            "routes": Array [
              Object {
                "key": "id-1565732047195-1",
                "routeName": "Main",
              },
            ],
          },
        ],
      },
      "toggleDrawer": [MockFunction],
    }
  }
  primary="#E88C0C"
  styles={
    Object {
      "height": 50,
    }
  }
  theme={
    Object {
      "background": "#FFF",
      "color": "#17212D",
      "isDark": true,
    }
  }
/>
`;
